# python-otelio

./: .gitignore  CHANGELOG.md  README.md  publish.sh  pyproject.toml
docs/: custom-exporter.md  usage.md
src/otelio/: README.md  __init__.py  bootstrap.py  config.py  exporters.py  helpers.py  logging.py  tracing.py
