[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otelio"
version = "0.0.1"
description = "Otelio: OpenTelemetry + Loguru toolkit for Python services"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mostafa Kamal", email = "hiremostafa@gmail.com" }
]
keywords = [
    "python",
    "opentelemetry",
    "otel",
    "observability",
    "tracing",
    "logging",
    "loguru",
    "code4mk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
azure = [
    "azure-monitor-opentelemetry-exporter>=1.0.0b45",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/code4mk/python-otelio"
Source = "https://github.com/code4mk/python-otelio"
Changelog = "https://github.com/code4mk/python-otelio/blob/main/CHANGELOG.md"
Documentation = "https://github.com/code4mk/python-otelio"
"Bug Tracker" = "https://github.com/code4mk/python-otelio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/otelio"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/.gitignore",
    "/.env",
    "/publish.sh",
    "/_docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
