[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otelio"
version = "0.0.1"
description = "Otelio: OpenTelemetry + Loguru toolkit for Python services"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mostafa Kamal", email = "hiremostafa@gmail.com" }
]
keywords = [
    "python",
    "opentelemetry",
    "otel",
    "observability",
    "tracing",
    "logging",
    "loguru",
    "code4mk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    # Capped at 1.40.* because the Azure exporter (optional dep below) hard-pins the
    # OTel api/sdk to ==1.40; OTel 1.41+ drops `LogData` from opentelemetry.sdk._logs,
    # which the Azure exporter imports. Bump together once Azure supports a newer OTel.
    "opentelemetry-api==1.40.*",
    "opentelemetry-sdk==1.40.*",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.*",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
azure = [
    "azure-monitor-opentelemetry-exporter>=1.0.0b53",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/code4mk/python-otelio"
Source = "https://github.com/code4mk/python-otelio"
Changelog = "https://github.com/code4mk/python-otelio/blob/main/CHANGELOG.md"
Documentation = "https://github.com/code4mk/python-otelio"
"Bug Tracker" = "https://github.com/code4mk/python-otelio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/otelio"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/.gitignore",
    "/.env",
    "/publish.sh",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
